# glim_ext

./: CMakeLists.txt  README.md  docker-compose.yml
config/: config_georeference.json
docker/: Dockerfile.ros2
modules/mapping/georeference/: CMakeLists.txt  README.md  package.xml
modules/mapping/georeference/include/glim_ext/: geodetic.hpp  georeference_module.hpp
modules/mapping/georeference/src/glim_ext/: geodetic.cpp  georeference_module.cpp  georeference_module_ros.cpp
